--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,10 +1,23 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
+        
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '13'
+        types:
+            TipoOperatore: App\Doctrine\DBAL\Type\TipoOperatore
+            Valutazione: App\Doctrine\DBAL\Type\Valutazione
+            PANF: App\Doctrine\DBAL\Type\PANF
+            FANF: App\Doctrine\DBAL\Type\FANF
+            ISS: App\Doctrine\DBAL\Type\ISS
+            Autonomia: App\Doctrine\DBAL\Type\Autonomia
+            Disturbi: App\Doctrine\DBAL\Type\Disturbi
+        connections:
+            default:
+                url: '%env(resolve:DATABASE_URL)%'
+                mapping_types:
+                    enum: string
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
