--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "@hotwired/stimulus": "^3.0.0",
         "@popperjs/core": "^2.11.5",
         "@symfony/stimulus-bridge": "^3.2.0",
+        "@symfony/ux-autocomplete": "file:vendor/symfony/ux-autocomplete/assets",
         "@symfony/webpack-encore": "^3.0.0",
         "bootstrap": "^5.2.0",
         "bs-custom-file-input": "^1.3.4",
@@ -11,6 +12,7 @@
         "node-sass": "^7.0.1",
         "regenerator-runtime": "^0.13.9",
         "sass-loader": "^13.0.2",
+        "tom-select": "^2.0.1",
         "webpack-notifier": "^1.15.0"
     },
     "license": "UNLICENSED",
