--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "symfony/validator": "6.0.*",
         "symfony/web-link": "6.0.*",
         "symfony/webpack-encore-bundle": "^1.15",
+        "symfony/workflow": "6.0.*",
         "symfony/yaml": "6.0.*",
         "symfonycasts/verify-email-bundle": "^1.10",
         "symfonycorp/platformsh-meta": "^1.0",
