--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,8 +32,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/admin, roles: ROLE_ADMIN }
-         - { path: ^/homepage, roles: ROLE_USER }
+         - { path: ^/homepage}
+         #, roles: ROLE_ADMIN }
+         #- { path: ^/homepage, roles: ROLE_USER }
 
 when@test:
     security:
