mailer non funzionante

--- a/.env
+++ b/.env
@@ -42,7 +42,7 @@ DATABASE_URL="mysql://mm_symfony:mm_pass@127.0.0.1:54000/mm_db?serverVersion=8&c
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=mailer://:1025
+MAILER_DSN=smtp://mailer:1025
 ###< symfony/mailer ###
 
 ###> blackfireio/blackfire-symfony-meta ###
