--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "symfony/webpack-encore-bundle": "^1.15",
         "symfony/workflow": "6.0.*",
         "symfony/yaml": "6.0.*",
+        "symfonycasts/reset-password-bundle": "^1.16",
         "symfonycasts/verify-email-bundle": "^1.10",
         "symfonycorp/platformsh-meta": "^1.0",
         "twig/extra-bundle": "^2.12|^3.0",
