inizio creazione api

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -3,6 +3,11 @@ framework:
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
     http_method_override: false
+    http_client:
+        default_options:
+            headers:
+                'WS-SDMANAGER-APIKEY': '9092f13daa057447ae12f307e072ca0a67e970f1'
+                'WS-SDMANAGER-CONSOLE-ID': 'demo'
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
