--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,7 +33,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/homepage, roles: [ROLE_USER, ROLE_ADMIN]}
+         - { path: ^/scadenzario, roles: [ROLE_USER, ROLE_ADMIN]}
+         - { path: ^/elenco_schede, roles: ROLE_ADMIN}
          - { path: ^/scheda_pai, roles: [ROLE_USER, ROLE_ADMIN]}
          - { path: ^/barthel, roles: [ROLE_USER, ROLE_ADMIN]}
          - { path: ^/braden, roles: [ROLE_USER, ROLE_ADMIN]}
