--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,7 +10,16 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+    App\EventListener\CheckSchedePai:
+        tags:
+            - name: 'doctrine.event_subscriber'
 
+              # subscribers can define their priority in case multiple subscribers or listeners are associated
+              # to the same event (default priority = 0; higher numbers = listener is run earlier)
+              priority: 500
+
+              # you can also restrict listeners to a specific Doctrine connection
+              connection: 'default'
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
