listeners per scale fatti

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,6 +20,66 @@ services:
 
               # you can also restrict listeners to a specific Doctrine connection
               connection: 'default'
+    App\EventListener\CheckBarthel:
+        tags:
+            - name: 'doctrine.event_subscriber'
+
+              # subscribers can define their priority in case multiple subscribers or listeners are associated
+              # to the same event (default priority = 0; higher numbers = listener is run earlier)
+              priority: 500
+
+              # you can also restrict listeners to a specific Doctrine connection
+              connection: 'default'
+    App\EventListener\CheckBraden:
+        tags:
+            - name: 'doctrine.event_subscriber'
+
+              # subscribers can define their priority in case multiple subscribers or listeners are associated
+              # to the same event (default priority = 0; higher numbers = listener is run earlier)
+              priority: 500
+
+              # you can also restrict listeners to a specific Doctrine connection
+              connection: 'default'
+    App\EventListener\CheckSpmsq:
+        tags:
+            - name: 'doctrine.event_subscriber'
+
+              # subscribers can define their priority in case multiple subscribers or listeners are associated
+              # to the same event (default priority = 0; higher numbers = listener is run earlier)
+              priority: 500
+
+              # you can also restrict listeners to a specific Doctrine connection
+              connection: 'default'
+    App\EventListener\CheckTinetti:
+        tags:
+            - name: 'doctrine.event_subscriber'
+
+              # subscribers can define their priority in case multiple subscribers or listeners are associated
+              # to the same event (default priority = 0; higher numbers = listener is run earlier)
+              priority: 500
+
+              # you can also restrict listeners to a specific Doctrine connection
+              connection: 'default'
+    App\EventListener\CheckVas:
+        tags:
+            - name: 'doctrine.event_subscriber'
+
+              # subscribers can define their priority in case multiple subscribers or listeners are associated
+              # to the same event (default priority = 0; higher numbers = listener is run earlier)
+              priority: 500
+
+              # you can also restrict listeners to a specific Doctrine connection
+              connection: 'default'
+    App\EventListener\CheckLesioni:
+        tags:
+            - name: 'doctrine.event_subscriber'
+
+              # subscribers can define their priority in case multiple subscribers or listeners are associated
+              # to the same event (default priority = 0; higher numbers = listener is run earlier)
+              priority: 500
+
+              # you can also restrict listeners to a specific Doctrine connection
+              connection: 'default'
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
